Wrap long words to avoid gutter on small viewports

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -543,6 +543,9 @@ img
   z-index: 2
   pointer-events: none
 
+  code
+    word-wrap: break-word
+
   :not(p, span)
     pointer-events: auto
 
